Fixed CSS width overlap, for real

--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -13,7 +13,7 @@
     background-color: var(--background);
     margin: 0;
 
-    @media all and (min-width: $max-mobile-width) {
+    @media all and (min-width: $min-desktop-width) {
       margin: $base-margin 0;
     }
 
@@ -29,14 +29,14 @@
   }
 
   // Desktop
-  @media (min-width: $max-mobile-width) {
+  @media (min-width: $min-desktop-width) {
     display: flex;
     text-align: center;
     flex-direction: column;
     height: 100%;
   }
 
-  @media (max-width: $full-page-width) {
+  @media (max-width: $max-mobile-width) {
     position: absolute;
     text-align: right;
     background-color: transparent;
@@ -142,7 +142,7 @@
     }
   }
 
-  @media all and (max-width: $full-page-width) {
+  @media all and (max-width: $max-mobile-width) {
     margin-bottom: 0;
     margin-top: calc(0.5 * $base-margin);
     margin-right: calc(0.5 * $base-margin);
@@ -153,7 +153,7 @@
     font-size: var(--text-size-500);
   }
 
-  @media all and (min-width: $max-mobile-width) {
+  @media all and (min-width: $min-desktop-width) {
     margin-bottom: 0;
     margin-top: 0;
     margin-right: calc(0.25 * $base-margin); // Make it flush with the site links
@@ -167,7 +167,7 @@
   display: flex;
   align-items: center;
 
-  @media all and (min-width: $max-mobile-width) {
+  @media all and (min-width: $min-desktop-width) {
     flex-direction: column;
     align-items: flex-end;
   }
@@ -179,7 +179,7 @@
 }
 
 #navbar-right {
-  @media all and (min-width: $max-mobile-width) {
+  @media all and (min-width: $min-desktop-width) {
     margin-right: calc(0.25 * $base-margin);
   }
 }
@@ -188,7 +188,7 @@
   z-index: 1;
 }
 
-@media all and (max-width: $full-page-width) {
+@media all and (max-width: $max-mobile-width) {
   #quartz-body > #left-sidebar {
     width: 100%;
     position: sticky;
@@ -220,7 +220,7 @@
   flex-direction: column;
   position: relative;
 
-  @media all and (max-width: $full-page-width) {
+  @media all and (max-width: $max-mobile-width) {
     justify-content: space-between;
     width: 100.5%; // Prevent peek-through of other elements
     flex-direction: row;
@@ -229,7 +229,7 @@
 }
 
 :root[data-theme="dark"] .shadow {
-  @media all and (max-width: $full-page-width) {
+  @media all and (max-width: $max-mobile-width) {
     box-shadow: 0 4px 4px 0 var(--midground-faintest);
     clip-path: inset(0 0 -1500px 0);
   }
@@ -247,7 +247,7 @@
 }
 
 #header-video-container {
-  @media all and (min-width: $max-mobile-width) {
+  @media all and (min-width: $min-desktop-width) {
     width: 188px;
     height: 188px;
     min-height: 188px;
@@ -256,7 +256,7 @@
   }
 
   // Hide on mobile
-  @media all and (max-width: $full-page-width) {
+  @media all and (max-width: $max-mobile-width) {
     display: none;
   }
 }
@@ -271,7 +271,7 @@
   display: flex;
   flex-direction: row-reverse;
 
-  @media all and (max-width: $full-page-width) {
+  @media all and (max-width: $max-mobile-width) {
     position: relative;
     left: inherit;
     top: inherit;
@@ -293,7 +293,7 @@
     background-color: transparent;
     margin-right: calc(0.5 * $base-margin);
 
-    @media all and (min-width: $max-mobile-width) {
+    @media all and (min-width: $min-desktop-width) {
       margin-right: 0;
       margin-bottom: calc(0.5 * $base-margin);
       align-self: center; // Centered above the auto text
@@ -310,7 +310,7 @@
     user-select: all;
     cursor: text;
 
-    @media all and (max-width: $full-page-width) {
+    @media all and (max-width: $max-mobile-width) {
       margin-left: calc(0.25 * $base-margin);
       order: 999; // Push to the end of the row
     }
@@ -358,7 +358,7 @@
 }
 
 #nav-searchbar {
-  @media all and (min-width: $max-mobile-width) {
+  @media all and (min-width: $min-desktop-width) {
     order: 2; // Search bar comes after other links
     margin-top: calc(0.25 * $base-margin);
   }
